had menu items wrapped in h1 tag for some reason. Fixed it.

--- a/src/components/LandingPage/LandingPage.css
+++ b/src/components/LandingPage/LandingPage.css
@@ -2,6 +2,10 @@
 Grid
 -------------------------------------------------------------------------------- */
 
+.slider {
+  margin: 90%;
+}
+
 .grid {
   display: flex;
   flex: 0 1 auto;
